// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders back button correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 60,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "flex-start",
            "flex": 4,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/add_someone.png",
          }
        }
        style={
          Object {
            "height": 80,
            "resizeMode": "contain",
            "width": 80,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "lineHeight": 32,
              "paddingVertical": 10,
              "textAlign": "left",
            },
          ]
        }
      >
        Hello, world!
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="bottomButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#52C5DC",
                  "height": 60,
                  "justifyContent": "center",
                },
                null,
                Object {
                  "height": 48,
                  "marginBottom": 20,
                  "width": 300,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {},
                  ],
                ]
              }
            >
              CLICK ME
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 60,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "flex-start",
            "flex": 4,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/add_someone.png",
          }
        }
        style={
          Object {
            "height": 80,
            "resizeMode": "contain",
            "width": 80,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "lineHeight": 32,
              "paddingVertical": 10,
              "textAlign": "left",
            },
          ]
        }
      >
        Hello, world!
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="bottomButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#52C5DC",
                  "height": 60,
                  "justifyContent": "center",
                },
                null,
                Object {
                  "height": 48,
                  "marginBottom": 20,
                  "width": 300,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {},
                  ],
                ]
              }
            >
              CLICK ME
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`renders skip button correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="skipButton"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              null,
              Array [
                Object {
                  "padding": 15,
                },
                undefined,
              ],
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    undefined,
                  ],
                ],
              ]
            }
          >
            SKIP
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 60,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "flex-start",
            "flex": 4,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/add_someone.png",
          }
        }
        style={
          Object {
            "height": 80,
            "resizeMode": "contain",
            "width": 80,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "lineHeight": 32,
              "paddingVertical": 10,
              "textAlign": "left",
            },
          ]
        }
      >
        Hello, world!
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="bottomButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#52C5DC",
                  "height": 60,
                  "justifyContent": "center",
                },
                null,
                Object {
                  "height": 48,
                  "marginBottom": 20,
                  "width": 300,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {},
                  ],
                ]
              }
            >
              CLICK ME
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
